packages/libs/error-stack/tests/snapshots/test_debug__linear_ext@spantrace.snap
---
source: tests/test_debug.rs
expression: "redact(&format!(\"{report:#?}\"))"
---
Printable C
| @ tests/test_debug.rs:239:10
|-> Context B
|   > @ tests/test_debug.rs:238:10
|-> Printable B
|   > @ tests/test_debug.rs:236:10
|-> Context A
|   > @ tests/test_debug.rs:235:10
|-> Printable A
|   > @ tests/test_debug.rs:232:10
|-> Root error
|   > @ tests/common.rs:140:5
|-> spantrace with 2 frames (1)
|   > @ tests/common.rs:140:5
\-> 3 additional attachments


━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

Span Trace No. 1
   [redacted]
