packages/libs/error-stack/tests/snapshots/test_debug__location_edge_case.snap
---
source: tests/test_debug.rs
expression: "redact(&format!(\"{report:?}\"))"
---
Root error
> @ tests/common.rs:140:5
