packages/libs/error-stack/tests/snapshots/test_debug__location_edge_case@backtrace-glyph.snap
---
source: tests/test_debug.rs
expression: "redact(&format!(\"{report:?}\"))"
---
Root error
│ tests/common.rs:140:5
╰─▶ backtrace with [n] frames (1)
    ╰ tests/common.rs:140:5
