packages/libs/error-stack/tests/snapshots/test_debug__location_edge_case@glyph.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:?}\")"
---

Root error
╰ 📌 tests/common.rs:140:5

