packages/libs/error-stack/tests/snapshots/test_debug__location_edge_case@spantrace-backtrace-glyph.snap
---
source: tests/test_debug.rs
expression: "redact(&format!(\"{report:?}\"))"
---
Root error
├╴tests/common.rs:147:5
├╴spantrace with 2 frames (1)
╰╴backtrace with [n] frames (1)
