packages/libs/error-stack/tests/snapshots/test_debug__location_edge_case@spantrace.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:?}\")"
---

Root error
| @ tests/common.rs:140:5
\-> spantrace with 2 frames (1)
    > @ tests/common.rs:140:5

